# EXAMPLE

./: .gitignore  CMakeLists.txt  INSTALL.md
.gear/: example.spec  rules
